--- a/venda_veiculo.html
+++ b/venda_veiculo.html
@@ -58,11 +58,11 @@
                 <div class="vehicle">
                     <div class="vehicle-info">
                         <div class="info-bread">
-                            <a href="">HOME </a>
+                            <a href="href="index.html"">HOME </a>
                             <span> > </span>
-                            <a href="">VENDA </a>
+                            <a href="href="venda.html"">VENDA </a>
                             <span> > </span>
-                            <a class="active" href="">VEÍCULO</a>
+                            <a class="active" href="venda_veiculo.html">VEÍCULO</a>
                         </div>
                         <div class="vehicle-featured-image"></div> <!-- vehicle-featured-image -->
                         <div class="vehicle-gallery">
