--- a/venda_veiculo.html
+++ b/venda_veiculo.html
@@ -58,9 +58,9 @@
                 <div class="vehicle">
                     <div class="vehicle-info">
                         <div class="info-bread">
-                            <a href="href="index.html"">HOME </a>
+                            <a href="index.html">HOME </a>
                             <span> > </span>
-                            <a href="href="venda.html"">VENDA </a>
+                            <a href="venda.html">VENDA </a>
                             <span> > </span>
                             <a class="active" href="venda_veiculo.html">VEÍCULO</a>
                         </div>
